# MinorProject

./: CMakeLists.txt
apps/: log_data.cpp
include/logger/: data_logger.hpp
include/perception/: README.md  oak_interface.hpp
include/visualization/: rerun_viz.hpp
src/logger/: data_logger.cpp
src/perception/: oak_interface.cpp
src/visualization/: rerun_viz.cpp
